# playground

20251019-TextToTones/: main.py
20251021-Flower/a_intro/: client_app.py  pyproject.toml  server_app.py
20251031-MD-NMR/: a_init.py  b_openmm.py  b_vacuum.py  c_solvated.py  d_extract_solute.py  e_cluster.py  f_predict_shifts.py  f_predict_shifts_average.py  f_predict_shifts_compute.py  f_predict_shifts_core.py  z_diagnostics.py  z_ssc_gpu_cpu_probe.py
20251031-MD-NMR/e_cluster/: ethanol_neutral_cdcl3_clusters.tsv  ethanol_neutral_cdcl3_kinetics.tsv  ethanol_neutral_cdcl3_labels.npy
20251031-MD-NMR/f_predict_shifts/ethanol_neutral_cdcl3/: cluster_0_J.npy  cluster_0_J_labels.txt  cluster_0_j_couplings.tsv  cluster_0_shifts.tsv  cluster_1_J.npy  cluster_1_j_couplings.tsv  cluster_1_shifts.tsv  cluster_2_J.npy  cluster_2_j_couplings.tsv  cluster_2_shifts.tsv  energies_cdcl3.tsv  params_compute.txt
20251031-MD-NMR/f_predict_shifts/strychnine_neutral_cdcl3/: cluster_0_J.npy  cluster_0_J_labels.txt  cluster_0_j_couplings.tsv  cluster_0_shifts.tsv  cluster_1_J.npy  cluster_1_j_couplings.tsv  cluster_1_shifts.tsv  cluster_2_J.npy  cluster_2_j_couplings.tsv  cluster_2_shifts.tsv  energies_cdcl3.tsv  params_compute.txt
20251103-NMR-annotate/: a_multinmrfit_example.py
